syntax = "proto3";

package kmn_poc_client;

option go_package = "github.com/mostafahatem20/master-thesis/protos/client";

// Service definition
service KeyManagementService {
  rpc AssignKey(AssignKeyRequest) returns (AssignKeyResponse);
  rpc GenerateKey(GenerateKeyRequest) returns (GenerateKeyResponse);
  rpc Sign(SignRequest) returns (SignResponse);
  rpc SignOnline(SignOnlineRequest) returns (SignOnlineResponse);
  rpc ExportKey(ExportKeyRequest) returns (ExportKeyResponse);
  rpc KeyUpdate(KeyUpdateRequest) returns (KeyUpdateResponse);
  rpc CombinePublicKeys(CombinePublicKeysRequest) returns (CombinePublicKeysResponse);
}

message AssignKeyRequest {
  string id = 1;
}

message AssignKeyResponse {
  string key_id = 1;
  string pub_key = 2;
}

message GenerateKeyRequest {
  string id = 1;
}

message GenerateKeyResponse {
  string key_id = 1;
  string pub_key = 2;
}

message SignRequest {
  bytes msg = 1;
  string key_id = 2;
}

message SignResponse {
  string signature = 1;
}

message SignOnlineRequest {
  bytes msg = 1;
  string key_id = 2;
}

message SignOnlineResponse {
  string signature = 1;
}


message ExportKeyRequest {
  string key_id = 1;
}

message ExportKeyResponse {
  string key = 1;
}

message KeyUpdateRequest {
    string key_id = 1;
    string key = 2;
}

message KeyUpdateResponse {
    string key_id = 1;
    string pub_key = 2;
}

message CombinePublicKeysRequest {
    string key_id = 1;
    string pub_key = 2;
}

message CombinePublicKeysResponse {
    string pub_key = 1;
}